hdmi-in.sdk/.metadata/.plugins/org.eclipse.cdt.ui/HDMI_IN.build.log
14:11:46 **** Incremental Build of configuration Debug for project HDMI_IN ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/video_demo.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_demo.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/video_demo.d" -MT"src/video_demo.o" -o "src/video_demo.o" "../src/video_demo.c"
../src/video_demo.c: In function 'IntcInitFunction':
../src/video_demo.c:66:32: error: 'XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^
../src/video_demo.c:66:32: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/video_demo.c:66:32: note: each undeclared identifier is reported only once for each function it appears in
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^
../src/video_demo.c:66:32: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/video_demo.c:188:10: warning: unused variable 'trig' [-Wunused-variable]
  u8 pri, trig;
          ^~~~
../src/video_demo.c:188:5: warning: unused variable 'pri' [-Wunused-variable]
  u8 pri, trig;
     ^~~
../src/video_demo.c: In function 'DemoStartGame':
../src/video_demo.c:463:33: warning: passing argument 2 of 'DisplayChangeFrame' makes integer from pointer without a cast [-Wint-conversion]
   DisplayChangeFrame(&dispCtrl, frame);
                                 ^~~~~
In file included from ../src/video_demo.c:30:0:
../src/display_ctrl/display_ctrl.h:103:5: note: expected 'u32 {aka long unsigned int}' but argument is of type 'u8 * {aka unsigned char *}'
 int DisplayChangeFrame(DisplayCtrl *dispPtr, u32 frameIndex);
     ^~~~~~~~~~~~~~~~~~
make: *** [src/video_demo.o] Fejl 1

14:11:50 Build Finished (took 4s.342ms)

